k8s/springboot-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-app
  template:
    metadata:
      labels:
        app: springboot-app
    spec:
      imagePullSecrets:
        - name: artifact-registry
      containers:
        - name: springboot-app
          image: us-east5-docker.pkg.dev/hallowed-tea-470200-d9/meu-repo/springboot-app:v4.0
          ports:
            - containerPort: 8080
